--- a/projeto.html
+++ b/projeto.html
@@ -6,12 +6,14 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="estilos.css" /> 
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
 </head>
 <body>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>    
-    <script src="script.js"> </script>
+    <script src="scripts.js"> </script>
        
 </body>
