--- a/projeto.html
+++ b/projeto.html
@@ -31,6 +31,6 @@
   
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>    
-    <script src="scripts.js"> </script>
+    <script src="js/scripts.js"> </script>
        
 </body>
