Ajustes no layout da tela 1

--- a/projeto.html
+++ b/projeto.html
@@ -24,10 +24,28 @@
           <p class= "creating-quizz">Criar Quizz</p>
         </button>
       </div>
-      <div class="all-quizzes">
-        <p class="first-title">Todos os Quizzes</p>
+      <div class="title">
+        <p class="all-quizzes">Todos os Quizzes</p>
       </div>
+      <div class="quizzes">
+        <div class="quizz" data-identifier="quizz-card">
+        </div>
+        <div class="quizz" data-identifier="quizz-card">
+        </div>
+        <div class="quizz" data-identifier="quizz-card">
+        </div>
+      </div>
+      <div class="quizzes">
+        <div class="quizz" data-identifier="quizz-card">
+        </div>
+        <div class="quizz" data-identifier="quizz-card">
+        </div>
+        <div class="quizz" data-identifier="quizz-card">
+        </div>
+    </div>
   </main>
+  <footer class="footer">
+  </footer>
   
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>    
