Titulo da página / Inicio layout página de um quiz

--- a/projeto.html
+++ b/projeto.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <title>BuzzQuizz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="UTF-8">
@@ -27,6 +28,8 @@
       <div class="all-quizzes">
         <p class="first-title">Todos os Quizzes</p>
       </div>
+
+      <div class="quizzscreen"></div>
   </main>
   
 
