--- a/projeto.html
+++ b/projeto.html
@@ -17,6 +17,7 @@
     <p class= "name"> BuzzQuizz </p>
   </header>
   <main class="main-content">
+    <div class="main-screen">
       <div class="upper-box">
         <div class = "first-line">
           <p class= "noquizzyet"> Você não criou nenhum quizz ainda :( </p>
@@ -45,9 +46,12 @@
         <div class="quizz" data-identifier="quizz-card">
         </div>
     </div>
+    </div>  
 
-    <div class="quizzscreen"></div>
-    
+    <div class="quizz-screen">
+
+    </div>
+
   </main>
   <footer class="footer">
   </footer>
