Layout página do quiz mobile

--- a/projeto.html
+++ b/projeto.html
@@ -48,7 +48,7 @@
     </div>
     </div>  
 
-    <div class="quizz-screen">
+    <div class="quizz-screen minimize">
       <div class="title-quizz">
         <img src="#"/>
         <div class="shadow"></div>
@@ -58,8 +58,8 @@
       <div class="container-quizz">
         <div class="box-quizz">
           <div class="question">Blablablabla?</div>
-          <div class="options">
-            <div class="answer">
+          <div class="options check">
+            <div class="answer selected wrong">
               <img src="#"/>
               <p>Gatineo</p>
             </div>
